add seperate endpoint to add invited user
